tests/baselines/reference/dynamicImportTrailingComma.errors.txt
tests/cases/compiler/dynamicImportTrailingComma.ts(2,1): error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
tests/cases/compiler/dynamicImportTrailingComma.ts(2,12): error TS1009: Trailing comma not allowed.


==== tests/cases/compiler/dynamicImportTrailingComma.ts (2 errors) ====
    const path = './foo';
    import(path,);
    ~~~~~~~~~~~~~
!!! error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
               ~
!!! error TS1009: Trailing comma not allowed.